thesis/code/sidecar-pattern.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-logs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-logs
  template:
    metadata:
      labels:
        app: nginx-logs
    spec:
      containers:
        - name: main-application
          image: nginx
          volumeMounts:
            - name: shared-logs
              mountPath: /var/log/nginx
        - name: sidecar-container
          image: busybox
          command: ["sh","-c","while true; do cat /var/log/nginx/access.log; sleep 30; done"]
          volumeMounts:
            - name: shared-logs
              mountPath: /var/log/nginx
      volumes:
        - name: shared-logs
          emptyDir: {}
